修改了许多功能